syntax = "proto3";

import "google/protobuf/empty.proto";

package base;

message SemanticVersion {
  uint64 major = 1;
  uint64 minor = 2;
  uint64 patch = 3;
  string pre = 4;
  string build = 5;
}

message CompatVersion {
  uint32 value = 1;
}

message Digest {
  repeated uint32 words = 1;
}

message ExitCode {
  reserved 5;
  oneof kind {
    uint32 halted = 1;
    uint32 paused = 2;
    google.protobuf.Empty system_split = 3;
    google.protobuf.Empty session_limit = 4;
  }
}
